--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div class="game-wrapper">
-			<h1>Pong</h1>
+			<h1>Kitty Pong</h1>
 			<div id="game"></div>
 		</div>
 		<script type="text/javascript" src="build/bundle.js"></script>
